# ClaimIQ_AI_Hackathon

./: .gitignore  CODE_ANALYSIS_IMPROVEMENTS.md  README.md  STREAMLIT_DEPLOYMENT.md  pyproject.toml  requirements.txt
app/: adjuster_guide.py  attachments.py  bq.py  email_io.py  run.py  streamlit_app.py  streamlit_deploy.py
app/frontend/: README.md  app.py  config.py  explainability.py  layout.py  runner.py  styles.py  summary.py  terminal.py  utils.py
app/frontend/tabs/: __init__.py  explainability.py  live_logs.py  summary.py
claimiq/: __init__.py
claimiq/agents/: __init__.py
claimiq/agents/copilot/: agent.py  functions.py  tool.py
claimiq/agents/coverage/: agent.py  functions.py  tool.py
claimiq/agents/fraud/: agent.py  functions.py  tool.py
claimiq/agents/intake/: agent.py  functions.py  tool.py
claimiq/agents/triage/: agent.py  tool.py  (+1 more)
claimiq/pipeline/: __init__.py  mail_guard.py  orchestrator.py  router.py  session.py
claimiq/shared/: __init__.py  audit.py  config.py  gemini.py  google_clients.py  openai_client.py  pdf_text.py  validation.py
claimiq/tools/: email_tool.py  report_tool.py
docs/: ClaimIQ_Codebase_Documentation.docx  TECHNICAL_DOCUMENTATION.md
docs/architecture/: README.md  generate_diagrams.py
tests/: sample_claim.json  test.py  test_copilot_upgrade.py  test_coverage_compliance.py  test_drive_auth.py  test_fraud_functions.py  test_intake_functions.py  test_mail_guard_dates.py  test_model_routing.py  test_openai_client.py  test_output_formatting.py  test_pipeline_smoke.py  test_session_strategy.py  test_triage_edge_cases.py
